[package]
name = "rust-dap"
version = "0.1.0"
authors = ["Maciej Dziardziel <fiedzia@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
regex = "1.3.9"

[build-dependencies.lalrpop]
version = "0.19.0"
features = ["lexer"]
